[package]
name = "webservice"
version = "0.1.0"
edition = "2021"
default-run = "teacher_service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.3"
actix-rt = "2.6.0"
chrono = {version="0.4.19",features = ["serde"]}
dotenv = "0.15.0"
serde = {version="1.0.136",features = ["derive"]}
sqlx = {version="0.5.10",default_features=false,features=[
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
]}

[[bin]]
name = "server1"
[[bin]]
name = "teacher_service"